force-app/main/default/objects/Case_Bus_Junction__c/Case_Bus_Junction__c.object-meta.xml
<CustomObject>
    <description>Many-Many Relationship between Case &amp; Bus for logging Bus Mileage Details</description>
    <label>Case-Bus Junction</label>
    <nameField>
        <displayFormat>CB-{000000}</displayFormat>
        <label>Case-Bus Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case-Bus Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>