force-app/main/default/objects/Case_Bus_Junction__c/fields/Bus__c.field-meta.xml
<CustomField>
    <fullName>Bus__c</fullName>
    <label>Bus</label>
    <referenceTo>Bus__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Case_Bus_Junctions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>