force-app/main/default/objects/Case_Bus_Junction__c/fields/Mileage_Reported__c.field-meta.xml
<CustomField>
    <fullName>Mileage_Reported__c</fullName>
    <label>Mileage Reported</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>