force-app/main/default/objects/Case_Bus_Junction__c/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <formula>Bus__r.Mode__c</formula>
    <label>Mode</label>
    <type>Text</type>
</CustomField>